reformat README because its so ugly

--- a/README
+++ b/README
@@ -1,4 +1,1 @@
-pdf.js is a technology demonstrator prototype to explore whether the HTML5
-platform is complete enough to faithfully and efficiently render the
-ISO 32000-1:2008 Portable Document Format (PDF) without native code
-assistance.
+pdf.js is a technology demonstrator prototype to explore whether the HTML5 platform is complete enough to faithfully and efficiently render the ISO 32000-1:2008 Portable Document Format (PDF) without native code assistance.
