update contact info

--- a/README
+++ b/README
@@ -7,6 +7,14 @@ You can read more about pdf.js here:
 http://andreasgal.com/2011/06/15/pdf-js/
 http://blog.mozilla.com/cjones/2011/06/15/overview-of-pdf-js-guts/
 
-Or follow us on twitter: @pdfjs
+follow us on twitter: @pdfjs
 
 http://twitter.com/#!/pdfjs
+
+join our mailing list:
+
+dev-pdf-js@lists.mozilla.org
+
+and talk to us on IRC:
+
+#pdfjs on irc.mozilla.org
