open_file and text_annotation_type localized strings

--- a/l10n/ar/viewer.properties
+++ b/l10n/ar/viewer.properties
@@ -27,4 +27,5 @@ rendering_error=حدث خطأ في حين جعل صفحة.‬
 page_label=الصفحة:‬
 page_of=من {{pageCount}}‬
 no_outline=لا مخطط متاح‬
-
+open_file.title=Open File
+text_annotation_type=[{{type}} Annotation]
