--- a/l10n/en-US/viewer.properties
+++ b/l10n/en-US/viewer.properties
@@ -27,4 +27,5 @@ rendering_error=An error occurred while rendering the page.
 page_label=Page:
 page_of=of {{pageCount}}
 no_outline=No Outline Available
-
+open_file.title=Open File
+text_annotation_type=[{{type}} Annotation]
