--- a/l10n/ru/viewer.properties
+++ b/l10n/ru/viewer.properties
@@ -27,4 +27,5 @@ rendering_error=Произошла ошибка во время создания
 page_label=Страница:
 page_of=из {{pageCount}}
 no_outline=Содержание не доступно
-
+open_file.title=Открыть Файл
+text_annotation_type=[Аннотация {{type}}]
