--- a/l10n/xx/viewer.properties
+++ b/l10n/xx/viewer.properties
@@ -27,3 +27,5 @@ rendering_error=<<<_ãп εггOг O¢¢ȗггεÐ ẂНiḻε гεпÐεгiпģ
 page_label=Þãģε:
 page_of=<<<_O£ {{pageCount}}_>>>
 no_outline=<<<_пO Oȗţḻiпε ãṿãiḻãьḻε_>>>
+open_file.title=<<<_OÞεп £iḻε_>>>
+text_annotation_type=<<<_[{{type}} ãппOţãţiOп]_>>>
