--- a/l10n/ar/viewer.properties
+++ b/l10n/ar/viewer.properties
@@ -1,31 +1,31 @@
-bookmark.title=الحالية عرض (نسخة أو في فتح نافذة جديدة)‬
-previous.title=سابق‬
-next.title=التالي‬
-print.title=طباعة‬
-download.title=تحميل‬
-zoom_out.title=التصغير‬
-zoom_in.title=تكبير‬
-error_more_info=مزيد من المعلومات‬
-error_less_info=أقل المعلومات‬
-error_close=أغلق‬
-error_build=PDF.JS البناء: ‬{{build}}
-error_message=الرسالة: ‬{{message}}
-error_stack=المكدس: ‬{{stack}}
-error_file=ملف:‬ {{file}}
-error_line=خط: ‬{{line}}
-page_scale_width=صفحة العرض‬
-page_scale_fit=صفحة صالح‬
-page_scale_auto=التلقائي تكبير‬
-page_scale_actual=الحجم الفعلي‬
-toggle_slider.title=تبديل المتزلج‬
-thumbs.title=وتظهر الصور المصغرة‬
-outline.title=عرض المخطط التفصيلي وثيقة‬
-loading=تحميل ... {{percent}}٪ في المئة‬
-loading_error_indicator=خطأ‬
-loading_error=حدث خطأ أثناء تحميل قوات الدفاع الشعبي.‬
-rendering_error=حدث خطأ في حين جعل صفحة.‬
-page_label=الصفحة:‬
-page_of=من {{pageCount}}‬
-no_outline=لا مخطط متاح‬
-open_file.title=Open File
-text_annotation_type=[{{type}} Annotation]
+bookmark.title=النافذه الحالية (نسخ أو فتح نافذة جديدة)
+previous.title=السابق
+next.title=التالي
+print.title=طباعة
+download.title=تحميل
+zoom_out.title=التصغير
+zoom_in.title=تكبير
+error_more_info=مزيد من المعلومات
+error_less_info=معلومات أقل
+error_close=أغلق
+error_build=PDF.JS بناء: {{build}}
+error_message=رسالة: {{message}}
+error_stack=المكدس: {{stack}}
+error_file=ملف: {{file}}
+error_line=سطر: {{line}}
+page_scale_width=عرض الصفحه
+page_scale_fit=تحجيم الصفحه
+page_scale_auto=تكبير تلقائي
+page_scale_actual=الحجم الفعلي
+toggle_slider.title=تبديل المتزلج
+thumbs.title=اظهار الصور المصغرة
+outline.title=عرض مخطط الوثيقه
+loading=تحميل ... {{percent}}٪ 
+loading_error_indicator=خطأ
+loading_error=حدث خطأ أثناء تحميل وثيقه بي دي اف
+rendering_error=حدث خطأ اثناء رسم الصفحه
+page_label=الصفحة:
+page_of=من {{pageCount}}
+no_outline=لايوجد مخطط
+open_file.title=فتح ملف
+text_annotation_type=[{{type}} ملاحظة]
