Allow fallback on langauge group; change localized text

--- a/l10n/ru/viewer.properties
+++ b/l10n/ru/viewer.properties
@@ -13,9 +13,9 @@ error_message=Сообщение: {{message}}
 error_stack=Стeк: {{stack}}
 error_file=Файл: {{file}}
 error_line=Строка: {{line}}
-page_scale_width=Ширина страницы
-page_scale_fit=Вся страница
-page_scale_auto=Автоматический
+page_scale_width=По ширине страницы
+page_scale_fit=Во всю страницу
+page_scale_auto=Авто
 page_scale_actual=Настоящий размер
 toggle_slider.title=Открыть/закрыть вспомогательную панель
 thumbs.title=Показать уменьшенные изображения
