Fixing localized strings

--- a/l10n/ru/viewer.properties
+++ b/l10n/ru/viewer.properties
@@ -5,8 +5,8 @@ print.title=Печать
 download.title=Загрузить
 zoom_out.title=Уменьшить
 zoom_in.title=Увеличить
-error_more_info=Больше информации
-error_less_info=Меньше информации
+error_more_info=Детали
+error_less_info=Скрыть детали
 error_close=Закрыть
 error_build=PDF.JS компиляция: {{build}}
 error_message=Сообщение: {{message}}
@@ -27,5 +27,5 @@ rendering_error=Произошла ошибка во время создания
 page_label=Страница:
 page_of=из {{pageCount}}
 no_outline=Содержание не доступно
-open_file.title=Открыть Файл
+open_file.title=Открыть файл
 text_annotation_type=[Аннотация {{type}}]
