Changin ru and xx locales

--- a/l10n/en-US/viewer.properties
+++ b/l10n/en-US/viewer.properties
@@ -30,8 +30,8 @@ no_outline=No Outline Available
 open_file.title=Open File
 text_annotation_type=[{{type}} Annotation]
 toggle_slider_label=Toggle Slider
-thumbs_label=Show Thumbnails
-outline_label=Show Document Outline
+thumbs_label=Thumbnails
+outline_label=Document Outline
 bookmark_label=Current View
 previous_label=Previous
 next_label=Next
