--- a/l10n/ru/viewer.properties
+++ b/l10n/ru/viewer.properties
@@ -1,6 +1,6 @@
 bookmark.title=Ссылка на текущий вид (скопировать или открыть в новом окне) 
-previous.title=Предыдущая
-next.title=Следующая
+previous.title=Предыдущая страница
+next.title=Следующая страница
 print.title=Печать
 download.title=Загрузить
 zoom_out.title=Уменьшить
@@ -29,3 +29,14 @@ page_of=из {{pageCount}}
 no_outline=Содержание не доступно
 open_file.title=Открыть файл
 text_annotation_type=[Аннотация {{type}}]
+toggle_slider_label=Вспомогательная панель
+thumbs_label=Уменьшенные изображения
+outline_label=Содержание документа
+bookmark_label=Текущий вид
+previous_label=Предыдущая
+next_label=Следующая
+print_label=Печать
+download_label=Загрузить
+zoom_out_label=Уменьшить
+zoom_in_label=Увеличить
+zoom.title=Масштаб
