--- a/l10n/xx/viewer.properties
+++ b/l10n/xx/viewer.properties
@@ -1,6 +1,6 @@
 bookmark.title=<<<_¢ȗггεпţ ṿiεẂ (¢OÞӳ Oг OÞεп iп пεẂ ẂiпÐOẂ)_>>>
-previous.title=<<<_ÞгεṿiOȗ§_>>>
-next.title=<<<_пεӾţ_>>>
+previous.title=<<<_ÞгεṿiOȗ§ Þãģε_>>>
+next.title=<<<_пεӾţ Þãģε_>>>
 print.title=<<<_Þгiпţ_>>>
 download.title=<<<_ÐOẂпḻOãÐ_>>>
 zoom_out.title=<<<_ƩOOм Oȗţ_>>>
@@ -29,3 +29,14 @@ page_of=<<<_O£ {{pageCount}}_>>>
 no_outline=<<<_пO Oȗţḻiпε ãṿãiḻãьḻε_>>>
 open_file.title=<<<_OÞεп £iḻε_>>>
 text_annotation_type=<<<_[{{type}} ãппOţãţiOп]_>>>
+toggle_slider_label=<<<_ţOģģḻε §ḻiÐεг_>>>
+thumbs_label=<<<_ţНȗмьпãiḻ§_>>>
+outline_label=<<<_ÐO¢ȗмεпţ Oȗţḻiпε_>>>
+bookmark_label=<<<_¢ȗггεпţ ṿiεẂ_>>>
+previous_label=<<<_ÞгεṿiOȗ§_>>>
+next_label=<<<_пεӾţ_>>>
+print_label=<<<_Þгiпţ_>>>
+download_label=<<<_ÐOẂпḻOãÐ_>>>
+zoom_out_label=<<<_ƩOOм Oȗţ_>>>
+zoom_in_label=<<<_ƩOOм iп_>>>
+zoom.title=<<<_ƩOOм_>>>
