--- a/l10n/sr/viewer.properties
+++ b/l10n/sr/viewer.properties
@@ -1,42 +1,42 @@
-bookmark.title=Current view (copy or open in new window)
-previous.title=Previous Page
-next.title=Next Page
-print.title=Print
-download.title=Download
-zoom_out.title=Zoom Out
-zoom_in.title=Zoom In
-error_more_info=More Information
-error_less_info=Less Information
-error_close=Close
+bookmark.title=Тренутни приказ (Умножити или отворити у новом прозору)
+previous.title=Предходна страна
+next.title=Следећа страна
+print.title=Штампај
+download.title=Преузми
+zoom_out.title=Умањи
+zoom_in.title=Увећај
+error_more_info=Више информација
+error_less_info=Мање информација
+error_close=Затвори
 error_build=PDF.JS Build: {{build}}
 error_message=Message: {{message}}
 error_stack=Stack: {{stack}}
 error_file=File: {{file}}
 error_line=Line: {{line}}
-page_scale_width=Page Width
-page_scale_fit=Page Fit
-page_scale_auto=Automatic Zoom
-page_scale_actual=Actual Size
-toggle_slider.title=Toggle Slider
-thumbs.title=Show Thumbnails
-outline.title=Show Document Outline
-loading=Loading... {{percent}}%
-loading_error_indicator=Error
-loading_error=An error occurred while loading the PDF.
-rendering_error=An error occurred while rendering the page.
+page_scale_width=Ширина странице
+page_scale_fit=Уклопи 
+page_scale_auto=Аутоматско увећавање
+page_scale_actual=Стварна величина
+toggle_slider.title=Клизач
+thumbs.title=Прикажи сличице
+outline.title=Прикажи у линијама
+loading=Учитавање... {{percent}}%
+loading_error_indicator=Грешка
+loading_error=Дошло је до грешке током учитавања ПДФ-а.
+rendering_error=Дошло је до грешке приликом приказивања стране.
 page_label=Page:
 page_of=of {{pageCount}}
-no_outline=No Outline Available
-open_file.title=Open File
+no_outline=Нема линија
+open_file.title=Отвори датотеку
 text_annotation_type=[{{type}} Annotation]
-toggle_slider_label=Toggle Slider
-thumbs_label=Thumbnails
-outline_label=Document Outline
-bookmark_label=Current View
-previous_label=Previous
-next_label=Next
-print_label=Print
-download_label=Download
-zoom_out_label=Zoom Out
-zoom_in_label=Zoom In
-zoom.title=Zoom
+toggle_slider_label=Клизач
+thumbs_label=Сличице
+outline_label=Документи у линијама
+bookmark_label=Тренутни приказ
+previous_label=Предходна
+next_label=Следећа
+print_label=Штампај
+download_label=Преузми
+zoom_out_label=Умањи
+zoom_in_label=Увећај
+zoom.title=Скала
