Translation into Polish

--- a/l10n/pl/viewer.properties
+++ b/l10n/pl/viewer.properties
@@ -1,42 +1,42 @@
-bookmark.title=Current view (copy or open in new window)
-previous.title=Previous Page
-next.title=Next Page
-print.title=Print
-download.title=Download
-zoom_out.title=Zoom Out
-zoom_in.title=Zoom In
-error_more_info=More Information
-error_less_info=Less Information
-error_close=Close
-error_build=PDF.JS Build: {{build}}
-error_message=Message: {{message}}
-error_stack=Stack: {{stack}}
-error_file=File: {{file}}
-error_line=Line: {{line}}
-page_scale_width=Page Width
-page_scale_fit=Page Fit
-page_scale_auto=Automatic Zoom
-page_scale_actual=Actual Size
-toggle_slider.title=Toggle Slider
-thumbs.title=Show Thumbnails
-outline.title=Show Document Outline
-loading=Loading... {{percent}}%
-loading_error_indicator=Error
-loading_error=An error occurred while loading the PDF.
-rendering_error=An error occurred while rendering the page.
-page_label=Page:
-page_of=of {{pageCount}}
-no_outline=No Outline Available
-open_file.title=Open File
-text_annotation_type=[{{type}} Annotation]
-toggle_slider_label=Toggle Slider
-thumbs_label=Thumbnails
-outline_label=Document Outline
-bookmark_label=Current View
-previous_label=Previous
-next_label=Next
-print_label=Print
-download_label=Download
-zoom_out_label=Zoom Out
-zoom_in_label=Zoom In
-zoom.title=Zoom
+bookmark.title=Aktualny widok (kopiuj lub otwórz w nowym oknie)
+previous.title=Poprzednia strona
+next.title=Następna strona
+print.title=Drukuj
+download.title=Pobierz
+zoom_out.title=Pomniejsz
+zoom_in.title=Powiększ
+error_more_info=Więcej informacji
+error_less_info=Mniej informacji
+error_close=Zamknij
+error_build=Wersja PDF.JS: {{build}}
+error_message=Wiadomość: {{message}}
+error_stack=Stos: {{stack}}
+error_file=Plik: {{file}}
+error_line=Linia: {{line}}
+page_scale_width=Szerokość strony
+page_scale_fit=Cała strona
+page_scale_auto=Automatyczne dopasowanie
+page_scale_actual=Rzeczywisty rozmiar
+toggle_slider.title=Włącz/wyłącz suwak
+thumbs.title=Wyświetl miniatury
+outline.title=Wyświetl konspekt dokumentu
+loading=Wczytywanie... {{percent}}%
+loading_error_indicator=Błąd
+loading_error=Wystąpił błąd podczas wczytywania pliku PDF.
+rendering_error=Wystąpił błąd podczas wyświetlania strony.
+page_label=Strona:
+page_of=z {{pageCount}}
+no_outline=Konspekt nie jest dostępny
+open_file.title=Otwórz plik
+text_annotation_type=[Komentarz {{type}}]
+toggle_slider_label=Przełącz suwak
+thumbs_label=Miniatury
+outline_label=Konspekt dokumentu
+bookmark_label=Aktualny widok
+previous_label=Wstecz
+next_label=Dalej
+print_label=Drukuj
+download_label=Pobierz
+zoom_out_label=Pomniejsz
+zoom_in_label=Powiększ
+zoom.title=Powiększenie
