Accessibility labels for page previews

--- a/l10n/en-US/viewer.properties
+++ b/l10n/en-US/viewer.properties
@@ -40,3 +40,5 @@ download_label=Download
 zoom_out_label=Zoom Out
 zoom_in_label=Zoom In
 zoom.title=Zoom
+thumb_page_title=Page {{page}}
+thumb_page_canvas=Thumbnail of Page {{page}}
