--- a/l10n/xx/viewer.properties
+++ b/l10n/xx/viewer.properties
@@ -40,3 +40,5 @@ download_label=<<<_ÐOẂпḻOãÐ_>>>
 zoom_out_label=<<<_ƩOOм Oȗţ_>>>
 zoom_in_label=<<<_ƩOOм iп_>>>
 zoom.title=<<<_ƩOOм_>>>
+thumb_page_title=<<<_Þãģε {{page}}_>>>
+thumb_page_canvas=<<<_ţНȗмьпãiḻ O£ Þãģε {{page}}_>>>
