Swap Romanian translations for zooming in/out

--- a/l10n/ro/viewer.properties
+++ b/l10n/ro/viewer.properties
@@ -3,8 +3,8 @@ previous.title=Pagina precedentă
 next.title=Pagina următoare
 print.title=Tipărește
 download.title=Descarcă
-zoom_out.title=Mărește
-zoom_in.title=Micșorează
+zoom_out.title=Micșorează
+zoom_in.title=Mărește
 error_more_info=Detaliat
 error_less_info=Sumarizat
 error_close=Închide
@@ -37,6 +37,6 @@ previous_label=Înapoi
 next_label=Înainte
 print_label=Tipărește
 download_label=Descarcă
-zoom_out_label=Mărește
-zoom_in_label=Micșorează
+zoom_out_label=Micșorează
+zoom_in_label=Mărește
 zoom.title=Mărime
