--- a/l10n/en-US/viewer.properties
+++ b/l10n/en-US/viewer.properties
@@ -42,3 +42,6 @@ zoom_in_label=Zoom In
 zoom.title=Zoom
 thumb_page_title=Page {{page}}
 thumb_page_canvas=Thumbnail of Page {{page}}
+unsupported_feature=An unsupported feature was detected in this PDF document.
+download_document=Download Document
+disable_pdfjs=Disable Mozilla PDF Viewer
