--- a/l10n/en-US/viewer.properties
+++ b/l10n/en-US/viewer.properties
@@ -42,3 +42,4 @@ zoom_in_label=Zoom In
 zoom.title=Zoom
 thumb_page_title=Page {{page}}
 thumb_page_canvas=Thumbnail of Page {{page}}
+password_request=PDF is protected by a password:
