--- a/l10n/da/viewer.properties
+++ b/l10n/da/viewer.properties
@@ -29,3 +29,4 @@ page_of=af {{pageCount}}
 no_outline=Ingen dokumentoversigt tilgængelig
 open_file.title=Åbn fil
 text_annotation_type=[{{type}} Kommentar]
+request_password=PDF filen er beskyttet med et kodeord:
