Updated danish locale

--- a/l10n/da/viewer.properties
+++ b/l10n/da/viewer.properties
@@ -17,7 +17,7 @@ page_scale_width=Sidebredde
 page_scale_fit=Helside
 page_scale_auto=Automatisk zoom
 page_scale_actual=Faktisk størrelse
-toggle_slider.title=Skift Slider
+toggle_slider.title=Skift slider
 thumbs.title=Vis thumbnails
 outline.title=Vis dokumentoversigt
 loading=Indlæser... {{percent}}%
@@ -29,4 +29,17 @@ page_of=af {{pageCount}}
 no_outline=Ingen dokumentoversigt tilgængelig
 open_file.title=Åbn fil
 text_annotation_type=[{{type}} Kommentar]
+toggle_slider_label=Skift slider
+thumbs_label=Thumbnails
+outline_label=Dokumentoversigt
+bookmark_label=Aktuel visning
+previous_label=Forrige
+next_label=Næste
+print_label=Udskriv
+download_label=Hent
+zoom_out_label=Zoom ud
+zoom_in_label=Zoom ind
+zoom.title=Zoom
+thumb_page_title=Side {{page}}
+thumb_page_canvas=Thumbnail af side {{page}}
 request_password=PDF filen er beskyttet med et kodeord:
