Add localization strings for ru

--- a/l10n/ru/viewer.properties
+++ b/l10n/ru/viewer.properties
@@ -40,3 +40,6 @@ download_label=Загрузить
 zoom_out_label=Уменьшить
 zoom_in_label=Увеличить
 zoom.title=Масштаб
+thumb_page_title=Страница {{page}}
+thumb_page_canvas=Уменьшенное изображение страницы {{page}}
+request_password=PDF защищён паролем:
