--- a/l10n/fr/viewer.properties
+++ b/l10n/fr/viewer.properties
@@ -18,8 +18,8 @@ page_scale_fit=Ajuster à la page
 page_scale_auto=Zoom automatique
 page_scale_actual=Taille réelle
 toggle_slider.title=Afficher/Masquer la barre latérale
-thumbs.title=Afficher les vignettes
-outline.title=Afficher le contenu
+thumbs.title=Afficher/masquer les vignettes
+outline.title=Afficher/masquer la structure
 loading=Chargement… {{percent}}%
 loading_error_indicator=Erreur
 loading_error=Une erreur est survenue lors du chargement du PDF.
