small fix in French translation

--- a/l10n/fr/viewer.properties
+++ b/l10n/fr/viewer.properties
@@ -26,7 +26,7 @@ loading_error=Une erreur est survenue lors du chargement du PDF.
 rendering_error=Une erreur est survenue lors de l'affichage de la page.
 page_label=Page :
 page_of=sur {{pageCount}}
-no_outline=Pas de contenu disponible
+no_outline=Pas de structure disponible
 open_file.title=Ouvrir un fichier
 text_annotation_type=[Annotation {{type}}]
 toggle_slider_label=Afficher/Masquer la barre latérale
