--- a/l10n/en-US/viewer.properties
+++ b/l10n/en-US/viewer.properties
@@ -43,3 +43,4 @@ zoom.title=Zoom
 thumb_page_title=Page {{page}}
 thumb_page_canvas=Thumbnail of Page {{page}}
 request_password=PDF is protected by a password:
+open_file_label=Open
