Remove disable option. Change download wording to open.

--- a/l10n/en-US/chrome.properties
+++ b/l10n/en-US/chrome.properties
@@ -1,3 +1,2 @@
 unsupported_feature=An unsupported feature was detected in this PDF document.
-download_document=Download Document
-disable_viewer=Disable Mozilla PDF Viewer
+open_with_different_viewer=Open With Different Viewer
