--- a/l10n/en-US/viewer.properties
+++ b/l10n/en-US/viewer.properties
@@ -46,4 +46,5 @@ request_password=PDF is protected by a password:
 open_file_label=Open
 search.title=Search Document
 search_label=Search
+search_button=Find
 
