Change unsupported feature message.

--- a/l10n/en-US/chrome.properties
+++ b/l10n/en-US/chrome.properties
@@ -1,2 +1,2 @@
-unsupported_feature=An unsupported feature was detected in this PDF document.
+unsupported_feature=This PDF document might not be displayed correctly.
 open_with_different_viewer=Open With Different Viewer
