--- a/l10n/zh-TW/viewer.properties
+++ b/l10n/zh-TW/viewer.properties
@@ -24,8 +24,8 @@ loading=正在載入... {{percent}}%
 loading_error_indicator=錯誤
 loading_error=載入PDF檔案時發生錯誤。
 rendering_error=渲染頁面時發生錯誤。
-page_label=頁次:
-page_of=, 共 {{pageCount}} 頁
+page_label=第 
+page_of=頁, 共 {{pageCount}} 頁
 no_outline=無可用的綱要
 open_file.title=開啟檔案
 text_annotation_type=[{{type}} 註解]
@@ -43,3 +43,7 @@ zoom.title=縮放
 thumb_page_title=第 {{page}} 頁
 thumb_page_canvas=第 {{page}} 頁的縮圖
 request_password=PDF 檔案受密碼保護：
+open_file_label=開啟
+search.title=搜索文件
+search_label=搜索
+search_button=尋找
