Fixing search button; removing xx culture

--- a/l10n/en-US/viewer.properties
+++ b/l10n/en-US/viewer.properties
@@ -26,8 +26,8 @@ outline.title=Show Document Outline
 outline_label=Document Outline
 thumbs.title=Show Thumbnails
 thumbs_label=Thumbnails
-search.title=Search Document
-search_label=Search
+search_panel.title=Search Document
+search_panel_label=Search
 
 # Document outline messages
 no_outline=No Outline Available
