--- a/l10n/zh-TW/viewer.properties
+++ b/l10n/zh-TW/viewer.properties
@@ -1,10 +1,46 @@
-bookmark.title=目前檢視（複製或在新視窗中開啟）
+# 主工具列按鍵 (工具提示和圖像的替代文字)
 previous.title=上一頁
+previous_label=上一頁
 next.title=下一頁
-print.title=列印
-download.title=下載
+next_label=下一頁
+page_label=第 
+page_of=頁, 共 {{pageCount}} 頁
 zoom_out.title=縮小
+zoom_out_label=縮小
 zoom_in.title=放大
+zoom_in_label=放大
+zoom.title=縮放
+print.title=列印
+print_label=列印
+open_file.title=開啟檔案
+open_file_label=開啟
+download.title=下載
+download_label=下載
+bookmark.title=目前檢視（複製或在新視窗中開啟）
+bookmark_label=目前檢視
+
+# 側邊欄工具列按鍵 (工具提示和圖像的替代文字)
+toggle_slider.title=切換側邊欄
+toggle_slider_label=切換側邊欄
+outline.title=顯示文件綱要
+outline_label=文件綱要
+thumbs.title=顯示縮圖
+thumbs_label=縮圖
+search_panel.title=搜索文件
+search_panel_label=搜索
+
+# 文件綱要相關訊息
+no_outline=無可用的綱要
+
+# 縮圖面板項目 (工具提示和圖像的替代文字)
+thumb_page_title=第 {{page}} 頁
+thumb_page_canvas=第 {{page}} 頁的縮圖
+
+# 搜尋面板按鍵文字及訊息
+search=搜索
+search_terms_not_found=(沒有找到)
+
+# 錯誤面板標籤
 error_more_info=更多資訊
 error_less_info=更少資訊
 error_close=關閉
@@ -13,37 +49,19 @@ error_message=錯誤信息: {{message}}
 error_stack=堆疊: {{stack}}
 error_file=檔案: {{file}}
 error_line=行數: {{line}}
+rendering_error=渲染頁面時發生錯誤。
+
+# 預設的縮放值
 page_scale_width=符合頁寬
 page_scale_fit=符合頁面
 page_scale_auto=自動縮放
 page_scale_actual=實際大小
-toggle_slider.title=切換側邊欄
-thumbs.title=顯示縮圖
-outline.title=顯示文件綱要
+
+# 載入指示訊息
 loading=正在載入... {{percent}}%
 loading_error_indicator=錯誤
 loading_error=載入PDF檔案時發生錯誤。
-rendering_error=渲染頁面時發生錯誤。
-page_label=第 
-page_of=頁, 共 {{pageCount}} 頁
-no_outline=無可用的綱要
-open_file.title=開啟檔案
+
+# 其他標籤和訊息
 text_annotation_type=[{{type}} 註解]
-toggle_slider_label=切換側邊欄
-thumbs_label=縮圖
-outline_label=文件綱要
-bookmark_label=目前檢視
-previous_label=上一頁
-next_label=下一頁
-print_label=列印
-download_label=下載
-zoom_out_label=縮小
-zoom_in_label=放大
-zoom.title=縮放
-thumb_page_title=第 {{page}} 頁
-thumb_page_canvas=第 {{page}} 頁的縮圖
-request_password=PDF 檔案受密碼保護：
-open_file_label=開啟
-search.title=搜索文件
-search_label=搜索
-search_button=尋找
+request_password=PDF檔案受密碼保護：
