Update translation from latest English version of strings

--- a/l10n/zh-TW/viewer.properties
+++ b/l10n/zh-TW/viewer.properties
@@ -3,8 +3,13 @@ previous.title=上一頁
 previous_label=上一頁
 next.title=下一頁
 next_label=下一頁
+
+# 本地化提示 (page_label, page_of):
+# 這些字符串會連接成 "Page: X of Y" 的表示方式。
+# 不要翻譯 "{{pageCount}}" , 因為它用來表示總頁數。
 page_label=第 
 page_of=頁, 共 {{pageCount}} 頁
+
 zoom_out.title=縮小
 zoom_out_label=縮小
 zoom_in.title=放大
@@ -20,6 +25,7 @@ bookmark.title=目前檢視（複製或在新視窗中開啟）
 bookmark_label=目前檢視
 
 # 側邊欄工具列按鍵 (工具提示和圖像的替代文字)
+# (_label 字符串是按鍵的替代文字, .title 字符串是工具提示)
 toggle_slider.title=切換側邊欄
 toggle_slider_label=切換側邊欄
 outline.title=顯示文件綱要
@@ -33,7 +39,9 @@ search_panel_label=搜索
 no_outline=無可用的綱要
 
 # 縮圖面板項目 (工具提示和圖像的替代文字)
+# 本地化提示 (thumb_page_title): "{{page}}" 會被頁數取代。
 thumb_page_title=第 {{page}} 頁
+# 本地化提示 (thumb_page_canvas): "{{page}}" 會被頁數取代。
 thumb_page_canvas=第 {{page}} 頁的縮圖
 
 # 搜尋面板按鍵文字及訊息
@@ -44,10 +52,15 @@ search_terms_not_found=(沒有找到)
 error_more_info=更多資訊
 error_less_info=更少資訊
 error_close=關閉
+# 本地化提示 (error_build): "{{build}}" 會被PDF.JS版本號取代。
 error_build=PDF.JS 版本號: {{build}}
+# 本地化提示 (error_message): "{{message}}" 會被英文的錯誤描述取代。
 error_message=錯誤信息: {{message}}
+# 本地化提示 (error_stack): "{{stack}}" 會被錯誤堆疊取代。
 error_stack=堆疊: {{stack}}
+# 本地化提示 (error_file): "{{file}}" 會被檔案名稱取代。
 error_file=檔案: {{file}}
+# 本地化提示 (error_line): "{{line}}" 會被行數取代。
 error_line=行數: {{line}}
 rendering_error=渲染頁面時發生錯誤。
 
@@ -58,10 +71,13 @@ page_scale_auto=自動縮放
 page_scale_actual=實際大小
 
 # 載入指示訊息
+# 本地化提示 (error_line): "{{percent}}" 會被百分比取代。
 loading=正在載入... {{percent}}%
 loading_error_indicator=錯誤
 loading_error=載入PDF檔案時發生錯誤。
 
 # 其他標籤和訊息
+# "{{type}}" 用來表示PDF格式規範 (32000-1:2008 Table 169 – Annotation types) 入面所定義的註解種類。
+# 一些常見的類型有: "Check"、 "Text"、 "Comment"、 "Note"
 text_annotation_type=[{{type}} 註解]
 request_password=PDF檔案受密碼保護：
